src/styles/App.css
html, body, #root, .body{
  margin: 0;
  padding: 0;
  top: 0;
  left: 0;
  background-color: #EEEEEE;
}
input{
  border: 1px solid black;
}
.verti-center{
  height: 80px;
  line-height: 80px;
}
.fill_page {
  min-height: calc(90vh - 128px);
  margin-bottom: -30px;
}
.canigrowlogo-mobile{
  margin: 0 auto;
  width: 250px;
  text-align: center;
}
.hamburger-holder{
  display: inline-block;
  width: 5%;
}
.logo-holder{
  display: inline-block;
  width: 95%;
}
.header-navbar, .canigrowlogo, .home-button{
  display: none;
  visibility: hidden;
}
.header-container{
  /*background-color: rgba(102,34,0, 1);*/
  background-color: white;
  color: white;
  height: 80px;
}
.mobile-header-container{
  text-align: center;
}
.settings-centering{
  display: flex;
  justify-content: center;
  flex-direction: column;
}
.header-hamburger{
  float: left;
  cursor: pointer;
  top: 0;
  height: 100%;
  color: black;
  border: 0;
  background: 0;
}
.homepage-settings-section{
  padding: 5px 0;
  width: 80%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}
.header-hamburger:active{
  color: rgba(200,200,200, 1);
}
.homepage-season-selection{
  margin: 0 15px;
  width: 150px;
}
.canigrowlogo-container{
  display: flex;
  justify-content: center;
  flex-direction: column;
}
.styled-checkbox {
  & + label {
    position: relative;
    cursor: pointer;
    padding: 0;
  }
  & + label:before {
    content: '';
    margin-right: 20px;
    display: inline-block;
    vertical-align: text-top;
    width: 20px;
    height: 20px;
    background: white;
  }
  &:hover + label:before {
    background: #f35429;
  }
  &:focus + label:before {
    box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.12);
  }
  &:checked + label:before {
    background: #f35429;
  }
  &:disabled + label {
    color: #b8b8b8;
    cursor: auto;
  }
  &:disabled + label:before {
    box-shadow: none;
    background: #ddd;
  }
  &:checked + label:after {
    content: '';
    position: absolute;
    left: 5px;
    top: 9px;
    background: white;
    width: 2px;
    height: 2px;
    box-shadow:
      2px 0 0 white,
      4px 0 0 white,
      4px -2px 0 white,
      4px -4px 0 white,
      4px -6px 0 white,
      4px -8px 0 white;
    transform: rotate(45deg);
  }
}
.homepage-search-container{
  /*background-color: #00C851;*/
}
.main-component-container{
  margin: 10px 0;
}
.homepage-search-title, .homepage-search-box{
  text-align: center;
  /*color: #ffffff;*/
}
.homepage-search-box{
  /*margin: 10px 0;
  border: 0;
  background: 0;
  outline: 0;
  border-bottom: 1px solid white;*/
  border: none;
    padding: 10px;
    margin: 10px;
    height: 60px;
    width: 80%;
    border:2px solid #64dd17;
    outline:none;
}
.homepage-search-box:hover{
    /*border-color: #a0a0a0 #b9b9b9 #b9b9b9 #b9b9b9;*/
    border-color: #4285F4 #4285F4 #4285F4 #4285F4;
}
.homepage-search-box:focus{
    border-color:#4d90fe;
}
#zipcode{
  width: 80px;
  color: black;
}
.homepage-search-box:focus{
  background-color: rgba(255,255,255, 0.2);
}
.manual-link-style{
  cursor: pointer;
  color: #007bff;
}
.manual-link-style:hover{
  text-decoration: underline;
  color: #0056b3;
}
@media (min-width: 680px) {
  .homepage-settings-section{
    width: 80%;
    flex-direction: row;
  }
  .canigrowlogo{
    visibility: visible;
    display: block;
    width: 200px;
  }
  .changeButtons{
    /*margin-left: 400pt;*/
    /*width: 300pt;*/
    display: flex;
    /*border: 1pt black blue;
    background-color: none;*/
    flex-direction: row;
    /*list-style-type: none;*/
    justify-content: space-between;
  }
  .font-size-25px{
    font-size: 25px;
  }
  .homepage-search-title, .homepage-search-box{
    display: inline;
  }
  .mobile-header-container{
    visibility: hidden;
    display: none;
  }
  .header-navbar{
    height: 100%;
    width: 100%;
    display: flex;
    list-style-type: none;
    justify-content: space-between;
    /*padding: 5px;*/
    visibility: visible;
  }
  .main-component-container{
    margin: 3vh 3vw;
  }
}
@media (min-width: 768px) {
  .home-button{
    display: inline-block;
    visibility: visible;
  }
  .canigrowlogo{
    width: 300px;
  }
}
@media (min-width: 992px) {
  .canigrowlogo{
    height: 80px;
    width: auto;
  }
  .main-component-container{
    margin: 5vh 5vw;
  }
}
/*******************************
USERPAGE STYLES
*******************************/
.delete-dropover-parent{
  position: absolute;
  height: 100%;
  left: 0;
}
.delete-dropover-child{
  position: fixed;
  top: 50%;
  transform: translateY(-50%);
  width: 100px;
  height: 100px;
}
.delete-dropover-child-highlighted{
  position: fixed;
  top: 50%;
  transform: translateY(-50%);
  width: 100px;
  height: 100px;
}
#elementtoaddthepopupmenu{
  display: none;
  position: absolute;
}
.droppable-div{
  height: 30px;
  width: 100%;
  background-color: white;
}
.droppable-div-highlighted{
  height: 30px;
  width: 100%;
  background-color: rgba(255,255,255, 0.5);
}
.userpage-outer-plots-holder{
  display: flex;
  border: 1px solid grey;
  flex-direction: column;
}
.userpage-inner-plot-holder{
  margin: 10px auto;
  border: 1px solid black;
  width: 40%;
  background-color: rgba(201,224,100, 1);
}
.userpage-new-plot-name{
  width: 100%;
  text-align: center;
  /*border: 0;*/
  /*background: 0;*/
  outline: 0;
}
.userpage-new-plot{
  cursor: pointer;
  transition: background-color 1s;
  background-color: rgba(201,224,100, 0);
}
.userpage-plant-link, .userpage-plant-div-edit-button{
  cursor: pointer;
}
.userpage-new-plot:hover{
  background-color: rgba(201,224,100, 1);
}
.userpage-new-plot:active{
  transform: scale(1.1);
  background-color: rgba(201,224,100, 1);
}
@media (min-width: 680px) {
  .userpage-outer-plots-holder{
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: wrap;
  }
  .userpage-inner-plot-holder{
    /*width: 40%;*/
  }
}
.container-fluid{
  padding-top: 15px;
}

/*******************************
TEMP MODAL STYLES
*******************************/
.modal.left .modal-dialog{
  position: fixed;
  margin: auto;
  width: 170px;
  height: 100%;
  -webkit-transform: translate3d(0%, 0, 0);
      -ms-transform: translate3d(0%, 0, 0);
       -o-transform: translate3d(0%, 0, 0);
          transform: translate3d(0%, 0, 0);
}
.modal.left .modal-content{
  height: 100%;
  color: black;
  overflow-y: auto;
}
.modal.left .modal-body{
  padding: 15px 15px 80px;
}
.modal.left.fade .modal-dialog{
  left: -170px;
  -webkit-transition: opacity 0.3s linear, left 0.3s ease-out;
     -moz-transition: opacity 0.3s linear, left 0.3s ease-out;
       -o-transition: opacity 0.3s linear, left 0.3s ease-out;
          transition: opacity 0.3s linear, left 0.3s ease-out;
}
.modal.left.fade.in .modal-dialog{
  left: 0;
}

/*******************************/
  /*For Plantpage.js*/
/*******************************/

.plantpage-container {
  margin-bottom: 40pt;margin-bottom: 40pt;
}
.plant_big_image {
  width: 570px;
  height: 724px;
  background-color: #F1F1F1;
  position: relative;
  cursor: pointer;
  overflow: hidden;
  border: blue 2pt;
}
.plantpage-sub-container {
  /*background-color: #FDF8E2;*/
  background-color: #EEEEEE;
  width: 1150px;
  border-radius: 10px;
  margin: 10px auto;
}
.top_items_plant_page{
  display: flex;
  width: 1100px;
  margin-top: 20pt;
}
.all_plant_page_images, .top_items_plant_page_right{
  margin-left: 20pt;
  margin-top: 20pt;
  margin-bottom: 20pt;
}
.top_items_plant_page_right{
  background-color: #fff;
  width: 500px;
  height: 724px;
}
.top_items_plant_page_right_plant_info, .top_items_plant_page_right_tile{
  margin-top: 20pt;
  margin-left: 10pt;
}
.top_items_plant_page_right_plant_info{
  border: #FDF8E2;
  border-radius: 10px;
}
.plant_info_scientific_name{
  font-style: italic;
  justify-content: flex-start;
}
.plant_page_graph, .plant_page_graph_messages, .plant_page_comments{
  background-color: #fff;
  margin-top: 20pt;
  width: 180px;
}
.plant_page_graph, .plant_page_graph_messages{
  height: 500px;
  width: 570px;
}
.plant_page_graph_messages{
  width: 525px;
}
.font-size-16px{
  font-size: 16pt;
}
.style-margin-left-20px{
  margin-left: 20px;
}
.style-margin-bottom-20px{
  margin-bottom: 20px;
}
.outer_chart_for_plant{
  display: flex;
  justify-content: center;
}
.chart_for_plant{
  position: relative;
  height: 420px;
  width: 420px;
}
/*For plantpage dropdown*/
/* Dropdown Button */
.dropbtn {
    background-color: #4CAF50;
    color: white;
    padding: 16px;
    font-size: 16px;
    border: none;
    cursor: pointer;
}
/* Dropdown button on hover & focus */
.dropbtn:hover, .dropbtn:focus {
    background-color: #3e8e41;
}
/* The container <div> - needed to position the dropdown content */
.dropdown {
    position: relative;
    display: inline-block;
}
/* Dropdown Content (Hidden by Default) */
.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    /*min-width: 160px;*/
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}
/* Links inside the dropdown */
.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}
/* Change color of dropdown links on hover */
.dropdown-content a:hover {
  background-color: #f1f1f1
}
/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
.show {
  display:block;
}
.margin-top-20pt {
  margin-top: 20pt;
}
.blue-hover:hover {
  background-color: #f1f1f1
}
.bottom-text{
  margin-top: 20pt;
  position: relative;
  bottom: 0;
}
.homepage-sub-container {
  /*background-color: #FDF8E2;*/
  background-color: #EEEEEE;
  border-radius: 10px;
  margin: 10px auto;
  padding-bottom: 10px;
}
#footer-content{
  /*background-color: #FFFFFF;*/
  height: 64px;
  display: flex;
  justify-content: space-around;
  align-content: center;
}
.footer-sub-container{
  background-color: #FFFFFF;
  margin-top: 50px;
  left:0;
  bottom:0;
  right:0;
}
.centerHomeButtonComments{
  width: 450px;
}
.plant_page_buttons{
  display: flex;
  justify-content: space-between;
}
.margin-left-200{
  margin-left: -200pt;
}

